# a6vector

./: CMakeLists.txt
include/: vector.hpp  vector.ipp
src/: main.cpp  vector.cpp
tests/: test.cpp
tests/catch2/: catch.hpp:Zone.Identifier
